# canvas-plugins

./: .codecov.yml  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conftest.py  env.example  hatch_build.py  hcc004v1_dysrhythmia_suspect.py  manage.py  pyproject.toml  settings.py  validate_bp_plugin.py
cardbuttons2/: CANVAS_MANIFEST.json  README.md  pyproject.toml
cardbuttons2/protocols/: my_protocol.py
example-plugins/: .coverage  README.md  conftest.py  coverage.md  pyproject.toml  seed.py
example-plugins/abnormal_lab_task_notification/: README.md  pyproject.toml
example-plugins/agent_runner_poc/: pyproject.toml
example-plugins/ai_note_titles/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/api_samples/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/appointment-state-field/: pyproject.toml
example-plugins/appointment_coverage_label/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/appointment_state_field/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/appointment_updater/: CANVAS_MANIFEST.json  README.md
example-plugins/assign_document_reviewer_example/: pyproject.toml
example-plugins/autism_diagnosis_billing/: CANVAS_MANIFEST.json  README.md
example-plugins/autocomplete_annotation_demo/: pyproject.toml
example-plugins/availability_manager/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/canvas_fhir_client/: pyproject.toml
example-plugins/categorize_document_plugin/: pyproject.toml
example-plugins/charting_api_examples/: CANVAS_MANIFEST.json  README.md  pyproject.toml  util.py
example-plugins/chronic_care_management_activity_tracker/: CANVAS_MANIFEST.json  README.md
example-plugins/clipboard_regression_test/: pyproject.toml
example-plugins/cms122v14_diabetes_hemoglobin_a1c_poor_control/: pyproject.toml
example-plugins/cms125v14_breast_cancer_screening/: pyproject.toml
example-plugins/cms130v14_colorectal_cancer_screening/: pyproject.toml
example-plugins/cms131v14_diabetes_eye_exam/: pyproject.toml
example-plugins/cms138v14_preventive_care_and_screening_tobacco_use_screening_and_cessation_intervention/: pyproject.toml
example-plugins/coverage_metadata_sync/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/create_patient_with_key/: pyproject.toml
example-plugins/custom-data-room-booking/: pyproject.toml
example-plugins/custom_data_room_booking/: README.md  pyproject.toml
example-plugins/custom_data_uat/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/custom_homepage/: CANVAS_MANIFEST.json  README.md
example-plugins/data_integration_example/: pyproject.toml
example-plugins/documents_and_images/: CANVAS_MANIFEST.json
example-plugins/encounter_list/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/example_chart_app/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/example_commands/: .coverage  CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/example_patient_portal_page/: README.md  pyproject.toml
example-plugins/example_patient_sync/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/example_provider_companion_app/: README.md  pyproject.toml
example-plugins/example_provider_page/: README.md  pyproject.toml
example-plugins/example_sdk_effect_create_questionnaire/: CANVAS_MANIFEST.json  README.md  test_questionnaire.json  test_questionnaire_with_branching.json
example-plugins/fullscript/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/homepage/: pyproject.toml
example-plugins/imaging_template_explorer/: pyproject.toml
example-plugins/instance_config_settings_page/: CANVAS_MANIFEST.json  README.md
example-plugins/integration_task_explorer/: pyproject.toml
example-plugins/junk_document_plugin/: pyproject.toml
example-plugins/lab_results_modal/: pyproject.toml
example-plugins/lab_template_explorer/: pyproject.toml
example-plugins/male_bp_screening_plugin/: .gitignore  CANVAS_MANIFEST.json  INSTALLATION.md  README.md  __init__.py  validate_plugin.py
example-plugins/mcp_samples/: pyproject.toml
example-plugins/my_first_plugin/: pyproject.toml
example-plugins/note-timeline-restrictions/: pyproject.toml
example-plugins/note_header_assignee_options/: pyproject.toml
example-plugins/note_management_app/: pyproject.toml
example-plugins/note_state_transition_buttons/: pyproject.toml
example-plugins/note_uuid_tester/: CANVAS_MANIFEST.json  README.md
example-plugins/order_tracking/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/panel_management_dashboard_app/: CANVAS_MANIFEST.json  README.md
example-plugins/patient-update-webhook-sync/: pyproject.toml
example-plugins/patient_app_schedule/: CANVAS_MANIFEST.json  pyproject.toml
example-plugins/patient_portal_care_team_widget/: CANVAS_MANIFEST.json  README.md  care_team_widget.html
example-plugins/patient_portal_footer_widget/: CANVAS_MANIFEST.json  README.md  footer_widget.html
example-plugins/patient_portal_header_widget/: CANVAS_MANIFEST.json  README.md  header_widget.html
example-plugins/patient_portal_plugin/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/patient_portal_search_appointments_slots_plugin/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/patient_summary_chart_groups/: CANVAS_MANIFEST.json  README.md  pyproject.toml
example-plugins/paytheory_payment_processor/: CANVAS_MANIFEST.json  README.md
example-plugins/pharmacy_search_demo/: CANVAS_MANIFEST.json  README.md
example-plugins/plugins_smoke_test/: README.md  pyproject.toml
example-plugins/preact_hello_world/: .gitignore  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
example-plugins/prescribe_command_test/: pyproject.toml
example-plugins/protocols/: pyproject.toml
my_first_plugin/: CANVAS_MANIFEST.json  pyproject.toml
pytest-canvas/: README.md  pyproject.toml
speciality_report_explorer/: TESTING.md  TEST_DATA_SETUP.md  pyproject.toml
(+2291 files in other folders)
