[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Canvas Team <engineering@canvasmedical.com>"]
description = "SDK to customize event-driven actions in your Canvas instance"
license = "MIT"
name = "canvas"
packages = [
  {include = "canvas_cli"},
  {include = "canvas_generated"},
  {include = "canvas_sdk"},
  {include = "logger"}
]
readme = "README.md"
version = "0.1.14"

[tool.poetry.dependencies]
cookiecutter = "*"
cron-converter = "^1.2.1"
grpcio = "^1.60.1"
ipython = "^8.21.0"
jsonschema = "^4.21.1"
keyring = "*"
pydantic = "^2.6.1"
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
requests = "*"
restrictedpython = "^7.1"
statsd = "^4.0.1"
typer = {extras = ["all"], version = "*"}
websocket-client = "^1.7.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.60.1"
pre-commit = "*"
pytest = "*"
pytest-mock = "*"
python-semantic-release = "*"
requests-mock = "*"
types-requests = "*"

[tool.poetry.scripts]
canvas = "canvas_cli.main:app"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pydocstyle]
add_ignore = "D100,D104,D105,D106,D107,D200,D203,D205,D212,D400"
convention = "google"

[tool.pytest.ini_options]
addopts = "--durations=10"
filterwarnings = [
  'ignore:No directory at.*static.*:UserWarning:whitenoise.base',
  'ignore:SelectableGroups dict interface is deprecated. .*:DeprecationWarning'
]
markers = [
  'integration: mark a test as being an integration test with external dependencies'
]
norecursedirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "__pycache__",
  "node_modules",
  "static",
  "static-files"
]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
