[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "A plugin that creates task notifications for abnormal lab values"
license = "MIT"
name = "abnormal_lab_task_notification"
readme = "abnormal_lab_task_notification/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
