[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Adds a US state selection field to appointment forms and filters available providers based on their licensing in the selected state"
license = "MIT"
name = "appointment_state_field"
readme = "appointment_state_field/README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
