[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Example plugin demonstrating the ASSIGN_DOCUMENT_REVIEWER effect"
license = "MIT"
name = "assign_document_reviewer_example"
readme = "assign_document_reviewer_example/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
