[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Annotate every Diagnose and Assess Condition search result so the autocomplete annotation chips always render"
license = "MIT"
name = "autocomplete_annotation_demo"
readme = "autocomplete_annotation_demo/README.md"
requires-python = ">=3.11"
version = "0.0.1a"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
