[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Manages availability of resources based on custom rules"
license = "MIT"
name = "availability_manager"
readme = "availability_manager/README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
