[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Plugin that interacts with the Canvas FHIR APIs"
license = "MIT"
name = "canvas_fhir_client"
readme = "canvas_fhir_client/README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
