[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Example plugin that demonstrates how to use the CATEGORIZE_DOCUMENT effect to categorize documents in the Data Integration queue"
license = "MIT"
name = "categorize_document_plugin"
readme = "categorize_document_plugin/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
