[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "A series of custom API routes that showcase SDK charting functionality"
license = "MIT"
name = "charting_api_examples"
readme = "charting_api_examples/README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
