[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Breast Cancer Screening protocol - CMS125v14 Clinical Quality Measure"
license = "MIT"
name = "cms125v14-breast-cancer-screening"
readme = "cms125v14_breast_cancer_screening/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
