[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]",
  "pytest-canvas"
]
description = "Some description of your project."
license = "MIT"
name = "custom-data-room-booking"
readme = "custom_data_room_booking/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
