[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Used to test various canvas plugins functionality"
license = "MIT"
name = "example_chart_app"
readme = "example_chart_app/README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
