[dependency-groups]
test = ["pytest-cov>=7.0.0"]

[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Automatically populates command values with defaults when a command originates in a note"
license = "MIT"
name = "example_commands"
readme = "example_commands/README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = "--cov=example_commands --cov-report=term-missing"
python_files = ["*_tests.py", "test_*.py", "tests.py"]
pythonpath = ["."]

[tool.uv.sources]
canvas = {editable = true, path = "../../"}
